--- a/frontend/note-it-down/src/Contents/ContentPage.css
+++ b/frontend/note-it-down/src/Contents/ContentPage.css
@@ -167,6 +167,10 @@ overflow-y: auto;
     z-index: 1;
 }
 
+#dark .cover.dummy{
+    background-color: darkblue;
+}
+
 
 
 .settingsIcon svg{
